--- a/index.html
+++ b/index.html
@@ -771,8 +771,9 @@
         <footer>
             <div class="footer-left">
                 <div class="contact-item">
+                    <span>Reservasi dan Pemesanan</span>
                     <i class="fab fa-whatsapp"></i>
-                    <span>Reservasi dan Pemesanan 088216562558</span>
+                    <span>088216562558</span>
                 </div>
             </div>
             <div class="footer-right">
