--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
         }
         
         .stock-amount {
+            color: #EAA221;
             font-weight: bold;
             margin-left: 6px;
             font-size: 0.85rem;
